--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,14 @@ html { overflow-y: hidden; }
 .bg-blue {
     background-color: #225ad1;
 }
+.bg-right-blue {
+    background-color: #0396f5;
+}
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
     }
 }
-
 .b-example-divider {
     height: 3rem;
     background-color: rgba(0, 0, 0, .1);
@@ -28,25 +30,21 @@ html { overflow-y: hidden; }
     border-width: 1px 0;
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
-
 .b-example-vr {
     flex-shrink: 0;
     width: 1.5rem;
     height: 100vh;
 }
-
 .bi {
     vertical-align: -.125em;
     fill: currentColor;
 }
-
 .nav-scroller {
     position: relative;
     z-index: 2;
     height: 2.75rem;
     overflow-y: hidden;
 }
-
 .nav-scroller .nav {
     display: flex;
     flex-wrap: nowrap;
