[+] Added extra information [about-me] [+] Added possible solution for responsiveness navbar. [+] Added extra information [portfolio]
[/] Need to fix responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,10 @@ body {
     font-style: italic;
     color: #ddd;
 }
+
+@media (min-width: 250px) {
+    .navbar-expand-sm .navbar-nav .nav-link {
+        padding-right: var(--bs-navbar-nav-link-padding-x);
+        padding-left: var(--bs-navbar-nav-link-padding-x);
+    }
+}
